# bepis-fw-2040

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  backlight.c  buzzer.c  debug.c  debug.patch  gpio.c  gpio.h  gpioexp.c  interrupt.c  keyboard.c  main.c  mcp23017.c  mcp23017.h  peripherals.c  peripherals.h  pi.c  pi.h  reg.c  reg.h  shared_i2c.c  shared_i2c.h  touchpad.c  touchpad.h  usb.c  vibromotor.c  vibromotor.h  xl9535.c  xl9535.h
boards/: beepy.h  bepis.h  blepisv1.h  blepisv2.h
upy/: main.py  parse.py
